charts/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: alerttrap.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alerttrap
            port:
              number: 8081
  - host: grafana.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: storage.local
    http:
      paths:
      - path: /insert
        pathType: Prefix
        backend:
          service:
            name: mtproxy
            port:
              number: 8430
      - path: /select
        pathType: Prefix
        backend:
          service:
            name: mtproxy
            port:
              number: 8430
      - path: /api/v2/etcd
        pathType: Prefix
        backend:
          service:
            name: cdserver
            port:
              number: 8083
      - path: /api/v1/netmap
        pathType: Prefix
        backend:
          service:
            name: cdserver
            port:
              number: 8084
